# Hogbisz_CDN

./: .env.example  .gitignore  Cargo.toml  dev.docker-compose.yml  docker-compose.yml  entrypoint.sh
.github/workflows/: buildandpush.yml
Backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  entrypoint.sh
Backend/migrations/2022-10-16-021122_file_upload/: down.sql
Backend/src/: auth.rs  db_connection.rs  file.rs  model.rs  schema.rs
Frontend/: .gitignore  Cargo.toml  Dockerfile  package-lock.json
Frontend/nginx/: nginx.conf
Frontend/src/: main.rs  model.rs
Frontend/src/components/: mod.rs  pacman_spinner.rs
Frontend/src/pages/login/: mod.rs  util.rs  view.rs
Frontend/src/pages/main_page/: mod.rs  model.rs  util.rs  view.rs
hogbisz_cdn_frontend/: Cargo.toml  Trunk.toml  tailwind.config.js
hogbisz_cdn_frontend/src/: main.rs  route.rs
hogbisz_cdn_frontend/src/components/: pacman_spinner.rs
hogbisz_cdn_frontend/src/pages/login/: view.rs
hogbisz_cdn_frontend/src/pages/main_page/: view.rs
migrations/2022-10-16-021122_file_upload/: up.sql
src/: auth.rs  file.rs  main.rs  util.rs
