[package]
name = "hogbisz_cdn_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
yew-router = "0.16"
gloo-net = "0.2"
gloo = "0.8.0"
serde = { version = "1.0", features = ["derive"] }
serde-json-wasm = "0.4.1"
wasm-bindgen = {version = "0.2.83", features = ["serde-serialize"]}
wasm-bindgen-futures = "0.4"
serde-wasm-bindgen = "0.4"
yew-recaptcha-v3 = "0.1.2"
futures = "0.3.18"
size = "0.4"
js-sys = "0.3"
chrono = { version = "0.4.22", features = ["serde"] }

[dependencies.web-sys]
version = "0.3.60"
features = ["File", "DragEvent", "DataTransfer"]